--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,19 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <h1> Cipher Movies </h1>
+
+  <div>
+  <% if current_user %>
+    <%= link_to current_user.email, dashboard_path %>
+    <%= link_to "Sign Out", session_path, method: :delete %>
+  <% else %>
+    <%= link_to "Sign In", new_session_path %>
+    <%= link_to "Sign Up", new_user_path %>
+  <% end %>
+  <div>
+
 </head>
 <body>
 
