User can save a movie to their watch list
* upgraded to rails to avoid ActiveRecord bug, stack over flow questions about
* the issue is available. >> http://stackoverflow.com/questions/29358118/rails-4-many-to-many-though-join-model-undefined-method-name-fornilclass-sq

* removed feature movie spec tests are in watch list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <div>
   <% if current_user %>
+    <%= link_to "My Watch List", watch_list_path %>
     <%= link_to current_user.email, dashboard_path %>
     <%= link_to "Sign Out", session_path, method: :delete %>
   <% else %>
