--- a/app/views/searches/_preview.html.erb
+++ b/app/views/searches/_preview.html.erb
@@ -1,4 +1,4 @@
-<h2> <%= link_to preview.title, movie_path(preview.id) %> </h2>
+<h2> <%= link_to preview.title, search_movie_path(preview.id) %> </h2>
 <p> Rated <%= preview.content_advisory_rating %> </p>
 <p> Length <%= preview.length %> </p>
 <div>
