--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,5 +1,5 @@
 <h2> Search Results </h2>
 
 <div>
-  <%= render partial: "movies/preview", collection: @results %>
+  <%= render partial: "searches/preview", collection: @results %>
 <div>
