fix for adding movies

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,7 @@
 <h1>Your movies!!</h1>
 
-<br/>
-
-<% @movies.each do |movie| %>
-  <% if movie.user_id == current_user.id %>
-    <%= movie.name %>
+<ul>
+  <% current_user.movies.each do |movie| %>
+    <li><%= movie.name %></li>
   <% end %>
-<% end %>
+</ul>
