--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,4 +21,4 @@
     <%= f.password_field :password %>
     <br/>
   <%= f.submit %>
-<% end %>
+<% end %> <%= link_to "Already signed up?", new_session_path %>
